Updated gunicorn & README

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ web:
     - /usr/src/webapp
     - /usr/src/webapp/static
   env_file: .env
-  command: python manage.py runserver 0.0.0.0:8000
+  command: /usr/local/bin/gunicorn docker_django.wsgi:application -w 2 -b :8000
 
 postgres:
   restart: always
