Add .gitignore & Update docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,38 @@
-web:
-  restart: always
-  build: ./web
-  expose:
-    - "8000"
-  links:
-    - postgres:postgres
-    - redis:redis
-  volumes:
-    - /usr/src/webapp
-    - /usr/src/webapp/static
-  env_file: .env
-  command: /usr/local/bin/gunicorn docker_django.wsgi:application -w 2 -b :8000
+version: '2'
 
-postgres:
-  restart: always
-  image: postgres:9.5
-  ports:
-    - "5432:5432"
-  env_file: .env
-  volumes:
-    - pgdata:/var/lib/postgresql/data/
+services:
+  web:
+    restart: always
+    build: ./web
+    expose:
+      - "8000"
+    links:
+      - postgres:postgres
+      - redis:redis
+    env_file: .env
+    command: /usr/local/bin/gunicorn docker_django.wsgi:application -w 2 -b :8000
 
-nginx:
-  restart: always
-  build: ./nginx/
-  ports:
-    - "80:80"
-  volumes:
-    - /www/static
-  volumes_from:
-    - web
-  links:
-    - web:web
+  postgres:
+    restart: always
+    image: postgres:9.5
+    ports:
+      - "5432:5432"
+    env_file: .env
 
-redis:
-  restart: always
-  image: redis:latest
-  ports:
-    - "6379:6379"
-  volumes:
-    - redisdata:/data
+  nginx:
+    restart: always
+    build: ./nginx/
+    ports:
+      - "80:80"
+    volumes:
+      - /www/static
+    volumes_from:
+      - web
+    links:
+      - web:web
+
+  redis:
+    restart: always
+    image: redis:latest
+    ports:
+      - "6379:6379"
